Create sort of working python wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,31 @@
-cmake_minimum_required(VERSION 3.10)
-project(D3D11TextureCapture C)
+cmake_minimum_required(VERSION 3.12)
+project(accapture C)
 
 # Ensure we are building for Windows
 if(NOT WIN32)
     message(FATAL_ERROR "This project is intended to be built on Windows.")
 endif()
 
-# Specify the source file (adjust the name if different)
-set(SOURCE_FILES main.c)
+# Source files
+set(SOURCE_FILES capture.c)
 
-# Create the executable
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+# Include files
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
+# Create the library
+add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
 
 # Link with the Direct3D 11 library
 target_link_libraries(${PROJECT_NAME} d3d11)
 
-# Optionally, you can set the C standard (if required)
+# C standard
 set_target_properties(${PROJECT_NAME} PROPERTIES
     C_STANDARD 99
     C_STANDARD_REQUIRED YES
 )
+
+# Install targets
+install(TARGETS ${PROJECT_NAME}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
